No more scrollbar issue

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+html {
+  overflow-y: hidden;
+}
+
 body {
   background-color: #303030;
 }
